nu met totaal in export

--- a/karma/templates/karma/overview_template.tex
+++ b/karma/templates/karma/overview_template.tex
@@ -23,7 +23,7 @@
 	\hline \multicolumn{4}{r}{\textit{Continued on next page}} \\
 	\endfoot
 	
-	\hline
+	\hline \multicolumn{4}{r}{\textbf{ Totaal deze periode: {{ person.totalKarma }} }  } \\
 	\endlastfoot
 	
 	{% for task in person.tasks %}
